Added all api functions, swaggerUi, and external functions
